<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GestionarLibro">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input2_isbn"
            app:layout_constraintBottom_toTopOf="@+id/input2_nombre" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input2_nombre"
            app:layout_constraintBottom_toTopOf="@+id/input2_pags"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input2_pags"
            app:layout_constraintBottom_toTopOf="@+id/input2_edicion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input2_edicion"
            app:layout_constraintBottom_toTopOf="@+id/input2_fecha" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input2_fecha"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/input2_editorial" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input2_editorial"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/input2_numero"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input2_numero" app:layout_constraintStart_toStartOf="@+id/input2_editorial"
            app:layout_constraintEnd_toEndOf="@+id/input2_editorial"
            app:layout_constraintBottom_toTopOf="@+id/btn_eliminar"
            android:layout_marginBottom="28dp"/>
    <Button
            android:text="@string/Eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar" app:layout_constraintEnd_toStartOf="@+id/btn_actualizar"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.266"/>
    <Button
            android:text="@string/Actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/ISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/input2_isbn"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintTop_toTopOf="@+id/input2_isbn"
            app:layout_constraintBottom_toBottomOf="@+id/input2_isbn"/>
    <TextView
            android:text="@string/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toStartOf="@+id/input2_nombre"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.037"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/input2_nombre" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/input2_pags"/>
    <TextView
            android:text="@string/Pags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/input2_pags"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.494"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/input2_pags" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/input2_edicion"/>
    <TextView
            android:text="@string/Edicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/input2_edicion"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.516"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/input2_edicion"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/input2_fecha"/>
    <TextView
            android:text="@string/FechaPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/input2_fecha"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintTop_toTopOf="@+id/input2_fecha"
            app:layout_constraintBottom_toBottomOf="@+id/input2_fecha"/>
    <TextView
            android:text="@string/Editorial"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/input2_editorial"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/input2_editorial"
            app:layout_constraintBottom_toTopOf="@+id/input2_numero"/>
</android.support.constraint.ConstraintLayout>